--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   uuid: ^4.5.1
   permission_handler: 11.3.1
   path_provider: ^2.0.15 # or the latest version
+  shared_preferences: ^2.0.17
 
 
   # The following adds the Cupertino Icons font to your application.
